--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -15,5 +15,5 @@
 -->
 
 <resources>
-  <bool name="config_show_volumeRockerWake">true</bool>
+  <!--bool name="config_show_volumeRockerWake">true</bool-->
 </resources>
